@@ -861,7 +861,7 @@ package TestCase::Lib::SPVM::Sort {
         return ((TestCase::Minimal)$a)->x <=> ((TestCase::Minimal)$b)->x;
       });
       
-      my $is_equals = SPVM::Util->equals_oarray($objs, [new_minimal(1, 0), new_minimal(2, 0), new_minimal(3, 0)], sub : int ($self : self, $a : object, $b : object) {
+      my $is_equals = SPVM::Util->equals_object_array($objs, [new_minimal(1, 0), new_minimal(2, 0), new_minimal(3, 0)], sub : int ($self : self, $a : object, $b : object) {
         return ((TestCase::Minimal)$a)->x == ((TestCase::Minimal)$b)->x;
       });
       
@@ -891,7 +891,7 @@ package TestCase::Lib::SPVM::Sort {
         return $cmp;
       });
 
-      my $is_equals = SPVM::Util->equals_oarray($objs, [new_minimal(1, 3), new_minimal(2, 1), new_minimal(2, 2)], sub : int ($self : self, $a : object, $b : object) {
+      my $is_equals = SPVM::Util->equals_object_array($objs, [new_minimal(1, 3), new_minimal(2, 1), new_minimal(2, 2)], sub : int ($self : self, $a : object, $b : object) {
         if (((TestCase::Minimal)$a)->x == ((TestCase::Minimal)$b)->x && ((TestCase::Minimal)$a)->y == ((TestCase::Minimal)$b)->y) {
           return 1;
         }
@@ -913,7 +913,7 @@ package TestCase::Lib::SPVM::Sort {
         return ((TestCase::Minimal)$b)->x <=> ((TestCase::Minimal)$a)->x;
       });
       
-      my $is_equals = SPVM::Util->equals_oarray($objs, [new_minimal(3, 0), new_minimal(2, 0), new_minimal(1, 0)], sub : int ($self : self, $a : object, $b : object) {
+      my $is_equals = SPVM::Util->equals_object_array($objs, [new_minimal(3, 0), new_minimal(2, 0), new_minimal(1, 0)], sub : int ($self : self, $a : object, $b : object) {
         return ((TestCase::Minimal)$a)->x == ((TestCase::Minimal)$b)->x;
       });
       
@@ -930,7 +930,7 @@ package TestCase::Lib::SPVM::Sort {
         return ((TestCase::Minimal)$a)->x <=> ((TestCase::Minimal)$b)->x;
       });
       
-      my $is_equals = SPVM::Util->equals_oarray($objs, [new_minimal(2, 0), new_minimal(3, 0), new_minimal(1, 0)], sub : int ($self : self, $a : object, $b : object) {
+      my $is_equals = SPVM::Util->equals_object_array($objs, [new_minimal(2, 0), new_minimal(3, 0), new_minimal(1, 0)], sub : int ($self : self, $a : object, $b : object) {
         return ((TestCase::Minimal)$a)->x == ((TestCase::Minimal)$b)->x;
       });
       unless ($is_equals) {
@@ -946,7 +946,7 @@ package TestCase::Lib::SPVM::Sort {
         return ((TestCase::Minimal)$a)->x <=> ((TestCase::Minimal)$b)->x;
       });
       
-      my $is_equals = SPVM::Util->equals_oarray(
+      my $is_equals = SPVM::Util->equals_object_array(
         $objs,
         [new_minimal(5, 0), new_minimal(1, 0), new_minimal(2, 0), new_minimal(3, 0), new_minimal(-10, 0)],
         sub : int ($self : self, $a : object, $b : object) {
